[gd_scene load_steps=6 format=3 uid="uid://i6mu836ml34b"]

[ext_resource type="Script" path="res://hud/control.gd" id="1_htmxw"]
[ext_resource type="LabelSettings" uid="uid://blmxm8duk51re" path="res://assets/gl_48_white.tres" id="1_ss6nf"]
[ext_resource type="Texture2D" uid="uid://dp13y2vycwtnp" path="res://assets/items/pixel heart 2.png" id="2_xje6u"]
[ext_resource type="LabelSettings" uid="uid://celpla6or4mv6" path="res://assets/LG_64_title.tres" id="3_ahbw6"]
[ext_resource type="LabelSettings" uid="uid://b7ajcss4dl1mb" path="res://assets/lg_24_subtitle.tres" id="4_2fbqw"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_htmxw")

[node name="12" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HB" type="HBoxContainer" parent="12"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="12/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "0000"
label_settings = ExtResource("1_ss6nf")
vertical_alignment = 1

[node name="HB_Hearts" type="HBoxContainer" parent="12/HB"]
layout_mode = 2

[node name="L1" type="TextureRect" parent="12/HB/HB_Hearts"]
layout_mode = 2
texture = ExtResource("2_xje6u")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="12/HB/HB_Hearts"]
layout_mode = 2
texture = ExtResource("2_xje6u")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="12/HB/HB_Hearts"]
layout_mode = 2
texture = ExtResource("2_xje6u")
stretch_mode = 5

[node name="L4" type="TextureRect" parent="12/HB/HB_Hearts"]
layout_mode = 2
texture = ExtResource("2_xje6u")
stretch_mode = 5

[node name="L5" type="TextureRect" parent="12/HB/HB_Hearts"]
layout_mode = 2
texture = ExtResource("2_xje6u")
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.745098)

[node name="VB_LevelComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VB_LevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("3_ahbw6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VB_LevelComplete"]
layout_mode = 2
text = "PRESS JUMP FOR NEXT LEVEL"
label_settings = ExtResource("4_2fbqw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB_GameOver" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VB_GameOver"]
layout_mode = 2
text = "GameOVer"
label_settings = ExtResource("3_ahbw6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VB_GameOver"]
layout_mode = 2
text = "PRESS JUMP FOR NEXT LEVEL"
label_settings = ExtResource("4_2fbqw")
horizontal_alignment = 1
vertical_alignment = 1
